--- a/experiment/experiment4.html
+++ b/experiment/experiment4.html
@@ -7,26 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="Stylesheet" type="text/css" href="style.css" />
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 </head>
 
 <body >
-	<div ng-app="myApp" ng-controller="myCtrl" ng-init="nickname0=' ';nickname1=' ' ;nickname2=' ' " style="width:100%,height:100%">	
+	<div style="width:100%,height:100%">	
 	<p></p>
 	<div class = "admin"><div  class="test1"><div class="nickname">admin</div><img src="./1.jpg"/> </div><div class="test2"><div class = "content" id="admincontent"></div></div></div>
 	<p></p>
-	<div class = "user" id="user0"><div class="test1" ><div class="nickname">{{nickname0}}</div><img /> </div><div class="test2" id="show"><div class = "content" id="content0">{{content0}}</div></div></div>
+	<div class = "user" id="user0"><div class="test1" ><div class="nickname"></div><img /> </div><div class="test2" id="show"><div class = "content" id="content0"></div></div></div>
 	<p></p>
-	<div class = "user" id="user1"><div class="test1" ><div class="nickname">{{nickname1}}</div><img /> </div><div  class="test2" ><div class = "content" id="content1">{{content1}}</div></div></div>
+	<div class = "user" id="user1"><div class="test1" ><div class="nickname"></div><img /> </div><div  class="test2" ><div class = "content" id="content1"></div></div></div>
 	<p></p>
-	<div class = "user" id="user2"><div  class="test1"><div class="nickname">{{nickname2}}</div><img /> </div><div class="test2" ><div class = "content" id="content2">{{content2}}</div></div></div>
+	<div class = "user" id="user2"><div  class="test1"><div class="nickname"></div><img /> </div><div class="test2" ><div class = "content" id="content2"></div></div></div>
 	</div>
 </body>
 <script type="text/javascript">
-var app = angular.module("myApp", []);
-app.controller("myCtrl", function($scope) {
-});
 	var i = 0;
 	var socket = io.connect("https://wall.cgcgbcbc.com");
 	socket.on("new message",function (data) {
